--- a/app/views/rents/show.html.erb
+++ b/app/views/rents/show.html.erb
@@ -27,26 +27,26 @@
 
 <p>
   <strong>Start:</strong>
-  <%= @rent.start %>
+  <input type="text" class="calendar" />
 </p>
 
 <p>
   <strong>Finish:</strong>
-  <%= @rent.finish %>
+    <input type="text" class="calendar" />
 </p>
 
 <p>
-  <strong>Totald:</strong>
+  <strong>Total Days:</strong>
   <%= @rent.totald %>
 </p>
 
 <p>
-  <strong>Price:</strong>
-  <%= @rent.price %>
+  <strong>Daily Price:</strong>
+  €50 per day
 </p>
 
 <p>
-  <strong>Total:</strong>
+  <strong>Total Price:</strong>
   <%= @rent.total %>
 </p>
 
