--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,7 +17,10 @@
     </td>
     <td>
       <div class="name">
-        <%= link_to item.name, item %>
+       <%= link_to item.name, item %>
+          <!--% if item.name == "JUNIOR - Apollo Recall Junior Mountain Bike - 24" %>-->
+            <!--%= link_to 'site/about' %>-->
+        
       </div>
       <div class="description">
         <%= item.description %>
