--- a/app/views/rents/index.html.erb
+++ b/app/views/rents/index.html.erb
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+  
+  <% if @rent.name == "JUNIOR - Apollo Recall Junior Mountain Bike - 24" %>
+        <%= link_to 'about' %>
+  <% end %>
     
   <form action="/items">
 
