--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
       <p class="alert"><%= flash[:alert] %></p>
         <%= yield %>
         
+  <% if @item == "JUNIOR - Apollo Recall Junior Mountain Bike - 24" %>
+        <%= link_to 'about' %>
+  <% end %>
+        
+        
         <% if user_signed_in? %>
           <div> Signed <%= current_user.email %> (<%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>)
         <% else %>
