--- a/app/views/mycarts/index.html.erb
+++ b/app/views/mycarts/index.html.erb
@@ -26,7 +26,7 @@
         <td class="name"><%= link_to item.name, item %></td>
         <td class="price"><%= number_to_currency(item.price) %></td>
         <td class="quantity"><%= quantity %><br /></td>
-        <td class="price"><%= number_to_currency(quantity * item.price, :unit => "€") %></td>
+        <td class="pricee2e"><%= number_to_currency(quantity * item.price, :unit => "€") %></td>
     </tr>
     <% total += quantity * item.price %>
 <% end %>
