--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :firstname %><br>
+    <%= f.label :name %><br>
     <%= f.text_field :firstname %>
   </div>
   <div class="field">
@@ -31,6 +31,16 @@
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
   </div>
+  
+   <%= f.label :phone %>
+  <form action="/action_page.php">
+  <select name="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select>
+  <br><br>
   <div class="actions">
     <%= f.submit %>
   </div>
