--- a/app/views/rents/show.html.erb
+++ b/app/views/rents/show.html.erb
@@ -4,6 +4,9 @@
   <strong>Name:</strong>
   <%= @rent.name %>
 </p>
+  <% if @rent.name == "JUNIOR - Apollo Recall Junior Mountain Bike - 24" %>
+        <%= link_to 'about' %>
+  <% end %>
 
 <p>
   <strong>Description:</strong>
